examples/test/testpolicy1232.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1232
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key17: value41
      key47: value26
      key40: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value5
          key20: value47
      podSelector:
        matchLabels:
          key3: value49
          key18: value27
